<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- app_main_login -->
    <string name="account">请输入用户名</string>
    <string name="password">请输入密码</string>
    <string name="check_password">记住密码</string>
    <string name="check_login">自动登录</string>
    <string name="login">登录</string>
    <string name="loading">正在加载数据</string>
    <string name="register">注册</string>
    <string name="number_register">请输入手机号或者邮箱</string>
    <string name="account_register">用户名，仅限英文和数字</string>
    <string name="nickname_register">昵称，仅限中文、英文和数字</string>
    <string name="checknumber_register">请输入验证码</string>
    <string name="getchecknumber_register">获取验证码</string>
    <string name="password_register">请输入密码</string>
    <string name="password_again_register">请再次输入密码</string>

    <!-- app_main -->
    <!-- <string name="app_name">Jiazhangbang</string> -->
    <string name="app_name">家长帮助手</string>
    <string name="hello_world"></string>
    <string name="action_settings">Settings</string>
    <string name="empty_string"></string>
    <!-- setting_main -->
    <string name="can_not_find_version_name">1.0</string>
    <!-- main_activity_main -->
    <string name="main_activity_main_one">一年级</string>
    <string name="main_activity_main_two">二年级</string>
    <string name="main_activity_main_three">三年级</string>
    <string name="main_activity_main_four">四年级</string>
    <string name="main_activity_main_five">五年级</string>
    <string name="main_activity_main_six">六年级</string>
    <string name="main_activity_main_one_up">一年级上册</string>
    <string name="main_activity_main_one_dowm">一年级下册</string>
    <string name="main_activity_main_two_up">二年级上册</string>
    <string name="main_activity_main_two_dowm">二年级下册</string>
    <string name="main_activity_main_three_up">三年级上册</string>
    <string name="main_activity_main_three_dowm">三年级下册</string>
    <string name="main_activity_main_four_up">四年级上册</string>
    <string name="main_activity_main_four_dowm">四年级下册</string>
    <string name="main_activity_main_five_up">五年级上册</string>
    <string name="main_activity_main_five_dowm">五年级下册</string>
    <string name="main_activity_main_six_up">六年级上册</string>
    <string name="main_activity_main_six_dowm">六年级下册</string>
    <string name="main_activity_main_chinese">语文</string>
    <string name="main_activity_main_math">数学</string>
    <string name="main_activity_main_english">英语</string>
    <string name="main_activity_main_course">培训课程</string>
    <string name="main_activity_main_animation">动画配音</string>
    <string name="main_activity_main_story">听故事</string>

    <string-array name="classes">
        <item>1年级</item>
        <item>2年级</item>
        <item>3年级</item>
        <item>4年级</item>
        <item>5年级</item>
        <item>6年级</item>
    </string-array>
    <!-- chinese_main -->
    <string name="activity_chinese_listen_text">听课文</string>
    <string name="activity_chinese_listen_write">听写</string>
    <string name="activity_chinese_recite_text">背诵</string>
    <string name="activity_chinese_repeat">朗读</string>
    <string name="activity_chinese_findnewwords">查生词</string>
    <string name="activity_chinese_playgames">玩游戏</string>
    <string name="activity_chinese_comingsoon">跟读</string>
    <string name="activity_chinese_setting">设置</string>

    <!-- listen_write_main -->
    <string name="listen_write_main_pause">暂停</string>
    <string name="listen_write_main_stop">结束</string>
    
</resources>