<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#D7CDBB" >

    <Spinner
        android:id="@+id/main_spinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:spinnerMode="dropdown"
        android:visibility="gone" >
    </Spinner>

    <HorizontalScrollView
        android:id="@+id/main_top_scrollview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/chinese_imageView"
        android:layout_below="@+id/main_spinner"
        android:layout_gravity="center_vertical"
        android:layout_marginEnd="@dimen/normal_view_margin05"
        android:layout_marginTop="@dimen/main_activity_top_chinese_math_english_imageview_margin"
        android:orientation="horizontal"
        android:scrollbars="none" >

        <LinearLayout
            android:id="@+id/main_top_linearlayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|start"
            android:gravity="center_vertical|start" >

            <TextView
                android:id="@+id/main_top_one_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/normal_view_margin05"
                android:layout_marginStart="@dimen/normal_view_margin00"
                android:background="@color/main_activity_top_background_no_chose"
                android:clickable="true"
                android:focusable="true"
                android:singleLine="true"
                android:text="@string/main_activity_main_one"
                android:textSize="@dimen/main_activity_top_textsize"
                android:visibility="visible" />

            <TextView
                android:id="@+id/main_top_two_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/normal_view_margin05"
                android:background="@color/main_activity_top_background_no_chose"
                android:clickable="true"
                android:focusable="true"
                android:singleLine="true"
                android:text="@string/main_activity_main_two"
                android:textSize="@dimen/main_activity_top_textsize"
                android:visibility="visible" />


            <TextView
                android:id="@+id/main_top_three_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/normal_view_margin05"
                android:background="@color/main_activity_top_background_no_chose"
                android:clickable="true"
                android:focusable="true"
                android:singleLine="true"
                android:text="@string/main_activity_main_three"
                android:textSize="@dimen/main_activity_top_textsize"
                android:visibility="visible" />


            <TextView
                android:id="@+id/main_top_four_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/normal_view_margin05"
                android:background="@color/main_activity_top_background_no_chose"
                android:clickable="true"
                android:focusable="true"
                android:singleLine="true"
                android:text="@string/main_activity_main_four"
                android:textSize="@dimen/main_activity_top_textsize"
                android:visibility="visible" />


            <TextView
                android:id="@+id/main_top_five_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/normal_view_margin05"
                android:background="@color/main_activity_top_background_no_chose"
                android:clickable="true"
                android:focusable="true"
                android:singleLine="true"
                android:text="@string/main_activity_main_five"
                android:textSize="@dimen/main_activity_top_textsize"
                android:visibility="visible" />


            <TextView
                android:id="@+id/main_top_six_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/normal_view_margin05"
                android:background="@color/main_activity_top_background_no_chose"
                android:clickable="true"
                android:focusable="true"
                android:singleLine="true"
                android:text="@string/main_activity_main_six"
                android:textSize="@dimen/main_activity_top_textsize"
                android:visibility="visible" />
        </LinearLayout>
    </HorizontalScrollView>

    <ImageView
        android:id="@+id/chinese_imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignTop="@+id/math_imageView"
        android:layout_marginEnd="@dimen/normal_view_margin05"
        android:layout_marginStart="@dimen/normal_view_margin15"
        android:contentDescription="@string/main_activity_main_chinese"
        android:src="@drawable/ic_launcher" />

    <ImageView
        android:id="@+id/math_imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/main_top_scrollview"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/main_activity_top_chinese_math_english_imageview_margin"
        android:contentDescription="@string/main_activity_main_math"
        android:src="@drawable/ic_launcher" />

    <ImageView
        android:id="@+id/English_imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignTop="@+id/chinese_imageView"
        android:layout_marginEnd="@dimen/normal_view_margin18"
        android:layout_marginStart="@dimen/normal_view_margin05"
        android:contentDescription="@string/main_activity_main_english"
        android:src="@drawable/ic_launcher" />

    <TextView
        android:id="@+id/Chinese_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/chinese_imageView"
        android:layout_below="@+id/chinese_imageView"
        android:layout_marginStart="@dimen/normal_view_margin15"
        android:layout_marginTop="@dimen/normal_view_margin18"
        android:gravity="start"
        android:text="@string/main_activity_main_chinese"
        android:textSize="@dimen/main_activity_top_chinese_math_english_textsize" />

    <TextView
        android:id="@+id/math_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/Chinese_textView"
        android:layout_alignBottom="@+id/Chinese_textView"
        android:layout_centerHorizontal="true"
        android:text="@string/main_activity_main_math"
        android:textSize="@dimen/main_activity_top_chinese_math_english_textsize" />

    <TextView
        android:id="@+id/English_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/math_textView"
        android:layout_alignEnd="@+id/English_imageView"
        android:layout_marginEnd="@dimen/normal_view_margin15"
        android:gravity="end"
        android:text="@string/main_activity_main_english"
        android:textSize="@dimen/main_activity_top_chinese_math_english_textsize" />

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_below="@+id/math_textView"
        android:layout_marginTop="@dimen/normal_view_margin27" >

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical|center_horizontal" >

            <TextView
                android:id="@+id/course_textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:text="@string/main_activity_main_course" />

            <TextView
                android:id="@+id/animation_textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignStart="@+id/course_textView"
                android:layout_below="@+id/course_textView"
                android:layout_marginTop="@dimen/normal_view_margin57"
                android:text="@string/main_activity_main_animation" />

            <TextView
                android:id="@+id/story_textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/animation_textView"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="@dimen/normal_view_margin57"
                android:text="@string/main_activity_main_story" />
        </RelativeLayout>
    </ScrollView>

</RelativeLayout>