<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/chinese_scrollview"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/activity_chinese_background"
    android:orientation="vertical"
    android:scrollbars="none" >

    <TableLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/activity_view_margin"
        android:layout_marginLeft="@dimen/activity_view_margin"
        android:layout_marginRight="@dimen/activity_view_margin"
        android:layout_marginTop="@dimen/activity_view_margin"
        android:shrinkColumns="*"
        android:stretchColumns="*" >

        <TableRow>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/activity_chinese_tablerow_button_margin"
                android:background="@drawable/activity_chinese_background_shape"
                android:gravity="center_vertical|center_horizontal"
                android:onClick="listenText"
                android:orientation="vertical" >

                <ImageButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical|center_horizontal"
                    android:layout_margin="@dimen/activity_chinese_tablerow_button_margin"
                    android:background="@drawable/chinese_listen_text_copy"
                    android:onClick="listenText" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/activity_chinese_tablerow_button_margin"
                    android:gravity="bottom|center_horizontal"
                    android:onClick="listenText"
                    android:text="@string/activity_chinese_listen_text"
                    android:textSize="@dimen/activity_chinese_tablerow_button_text_size" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/activity_chinese_tablerow_button_margin"
                android:background="@drawable/activity_chinese_background_shape"
                android:gravity="center_vertical|center_horizontal"
                android:onClick="listenWrite"
                android:orientation="vertical" >

                <ImageButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical|center_horizontal"
                    android:layout_margin="@dimen/activity_chinese_tablerow_button_margin"
                    android:background="@drawable/chinese_write_text_copy"
                    android:onClick="listenWrite" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/activity_chinese_tablerow_button_margin"
                    android:gravity="bottom|center_horizontal"
                    android:onClick="listenWrite"
                    android:text="@string/activity_chinese_listen_write"
                    android:textSize="@dimen/activity_chinese_tablerow_button_text_size" />
            </LinearLayout>
        </TableRow>

        <TableRow>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/activity_chinese_tablerow_button_margin"
                android:background="@drawable/activity_chinese_background_shape"
                android:gravity="center_vertical|center_horizontal"
                android:onClick="reciteText"
                android:orientation="vertical" >

                <ImageButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical|center_horizontal"
                    android:layout_margin="@dimen/activity_chinese_tablerow_button_margin"
                    android:background="@drawable/chinese_recite_text_copy"
                    android:onClick="reciteText" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/activity_chinese_tablerow_button_margin"
                    android:gravity="bottom|center_horizontal"
                    android:onClick="reciteText"
                    android:text="@string/activity_chinese_recite_text"
                    android:textSize="@dimen/activity_chinese_tablerow_button_text_size" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/activity_chinese_tablerow_button_margin"
                android:background="@drawable/activity_chinese_background_shape"
                android:gravity="center_vertical|center_horizontal"
                android:onClick="repeat"
                android:orientation="vertical" >

                <ImageButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical|center_horizontal"
                    android:layout_margin="@dimen/activity_chinese_tablerow_button_margin"
                    android:background="@drawable/chinese_read_text_copy"
                    android:onClick="repeat" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/activity_chinese_tablerow_button_margin"
                    android:gravity="bottom|center_horizontal"
                    android:onClick="repeat"
                    android:text="@string/activity_chinese_repeat"
                    android:textSize="@dimen/activity_chinese_tablerow_button_text_size" />
            </LinearLayout>
        </TableRow>

        <TableRow>

            <LinearLayout
                android:layout_width="@dimen/activity_chinese_tablerow_button_width"
                android:layout_height="@dimen/activity_chinese_tablerow_button_width"
                android:layout_margin="@dimen/activity_chinese_tablerow_button_margin"
                android:background="@drawable/activity_chinese_background_shape"
                android:gravity="center_vertical|center_horizontal"
                android:onClick="findNewWords"
                android:orientation="vertical" >

                <ImageButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical|center_horizontal"
                    android:layout_margin="@dimen/activity_chinese_tablerow_button_margin"
                    android:background="@drawable/chinese_find_new_words_copy"
                    android:onClick="findNewWords" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/activity_chinese_tablerow_button_margin"
                    android:gravity="bottom|center_horizontal"
                    android:onClick="findNewWords"
                    android:text="@string/activity_chinese_findnewwords"
                    android:textSize="@dimen/activity_chinese_tablerow_button_text_size" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="@dimen/activity_chinese_tablerow_button_width"
                android:layout_height="@dimen/activity_chinese_tablerow_button_width"
                android:layout_margin="@dimen/activity_chinese_tablerow_button_margin"
                android:background="@drawable/activity_chinese_background_shape"
                android:gravity="center_vertical|center_horizontal"
                android:onClick="playGame"
                android:orientation="vertical" >

                <ImageButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical|center_horizontal"
                    android:layout_margin="@dimen/activity_chinese_tablerow_button_margin"
                    android:background="@drawable/chinese_play_copy"
                    android:onClick="playGame" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/activity_chinese_tablerow_button_margin"
                    android:gravity="bottom|center_horizontal"
                    android:onClick="playGame"
                    android:text="@string/activity_chinese_playgames"
                    android:textSize="@dimen/activity_chinese_tablerow_button_text_size" />
            </LinearLayout>
        </TableRow>

        <TableRow>

            <LinearLayout
                android:layout_width="@dimen/activity_chinese_tablerow_button_width"
                android:layout_height="@dimen/activity_chinese_tablerow_button_width"
                android:layout_margin="@dimen/activity_chinese_tablerow_button_margin"
                android:background="@drawable/activity_chinese_background_shape"
                android:gravity="center_vertical|center_horizontal"
                android:onClick="recordText"
                android:orientation="vertical" >

                <ImageButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical|center_horizontal"
                    android:layout_margin="@dimen/activity_chinese_tablerow_button_margin"
                    android:background="@drawable/chinese_record_text_copy"
                    android:onClick="recordText" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/activity_chinese_tablerow_button_margin"
                    android:gravity="bottom|center_horizontal"
                    android:onClick="recordText"
                    android:text="@string/activity_chinese_comingsoon"
                    android:textSize="@dimen/activity_chinese_tablerow_button_text_size" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="@dimen/activity_chinese_tablerow_button_width"
                android:layout_height="@dimen/activity_chinese_tablerow_button_width"
                android:layout_margin="@dimen/activity_chinese_tablerow_button_margin"
                android:background="@drawable/activity_chinese_background_shape"
                android:gravity="center_vertical|center_horizontal"
                android:onClick="setting"
                android:orientation="vertical"
                android:visibility="visible" >

                <ImageButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical|center_horizontal"
                    android:layout_margin="@dimen/activity_chinese_tablerow_button_margin"
                    android:background="@drawable/chinese_setting_copy"
                    android:onClick="setting" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/activity_chinese_tablerow_button_margin"
                    android:gravity="bottom|center_horizontal"
                    android:onClick="setting"
                    android:text="@string/activity_chinese_setting"
                    android:textSize="@dimen/activity_chinese_tablerow_button_text_size" />
            </LinearLayout>
        </TableRow>
    </TableLayout>

</ScrollView>