<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_shape"
    android:orientation="vertical" >

    <ImageButton
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_57"
        android:background="@android:color/transparent"
        android:src="@drawable/icon_login_account" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/item_height_normal"
        android:layout_marginLeft="@dimen/margin_large"
        android:layout_marginRight="@dimen/margin_large"
        android:layout_marginTop="@dimen/dp_12" >

        <ImageView
            android:id="@+id/img_account"
            android:layout_width="@dimen/dp_19"
            android:layout_height="@dimen/dp_20"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="@dimen/margin_tiny"
            android:layout_marginLeft="@dimen/margin_tiny"
            android:scaleType="fitXY"
            android:src="@drawable/icon_login_account" />

        <EditText
            android:id="@+id/et_account"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="@dimen/margin_tiny"
            android:layout_marginLeft="@dimen/margin_normal"
            android:layout_toRightOf="@+id/img_account"
            android:background="@null"
            android:gravity="left|bottom"
            android:hint="@string/account"
            android:maxLines="1"
            android:textColor="@android:color/black"
            android:textColorHint="@color/tv_gray_deep"
            android:textSize="@dimen/text_size_normal" />

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/line_height"
            android:layout_alignParentBottom="true"
            android:layout_marginLeft="@dimen/margin_normal"
            android:layout_toRightOf="@+id/img_account"
            android:background="@color/orange_light" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/item_height_normal"
        android:layout_marginLeft="@dimen/margin_large"
        android:layout_marginRight="@dimen/margin_large" >

        <ImageView
            android:id="@+id/img_pw"
            android:layout_width="@dimen/dp_18"
            android:layout_height="@dimen/dp_20"
            android:layout_alignParentBottom="true"
            android:layout_gravity="center"
            android:layout_marginBottom="@dimen/margin_tiny"
            android:layout_marginLeft="@dimen/margin_tiny"
            android:scaleType="fitXY"
            android:src="@drawable/icon_login_pw" />

        <EditText
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="@dimen/margin_tiny"
            android:layout_marginLeft="@dimen/margin_normal"
            android:layout_toRightOf="@+id/img_pw"
            android:background="@null"
            android:gravity="left|bottom"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:maxLines="1"
            android:textColor="@android:color/black"
            android:textColorHint="@color/tv_gray_deep"
            android:textSize="@dimen/text_size_normal" />

        <ImageView
            android:id="@+id/iv_see_password"
            android:layout_width="@dimen/image_height_litter"
            android:layout_height="@dimen/image_height_litter"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:scaleType="fitXY"
            android:src="@drawable/image_password_bg" />

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/line_height"
            android:layout_alignParentBottom="true"
            android:layout_marginLeft="@dimen/margin_normal"
            android:layout_toRightOf="@+id/img_pw"
            android:background="@color/orange_light" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margin_large"
        android:layout_marginRight="@dimen/margin_large"
        android:layout_marginTop="@dimen/margin_small"
        android:gravity="center"
        android:orientation="horizontal"
        android:paddingBottom="@dimen/margin_small"
        android:paddingTop="@dimen/margin_small"
        android:visibility="gone" >

        <CheckBox
            android:id="@+id/checkBox_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:checked="false"
            android:padding="@dimen/dp_10"
            android:text="@string/check_password"
            android:textColor="@color/top_bar_normal_bg"
            android:textSize="@dimen/text_size_normal"
            android:visibility="visible" />

        <CheckBox
            android:id="@+id/checkBox_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:checked="false"
            android:padding="@dimen/dp_10"
            android:text="@string/check_login"
            android:textColor="@color/top_bar_normal_bg"
            android:textSize="@dimen/text_size_normal"
            android:visibility="visible" />
    </LinearLayout>

    <Button
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical|center_horizontal"
        android:layout_marginLeft="@dimen/margin_large"
        android:layout_marginRight="@dimen/margin_large"
        android:layout_marginTop="@dimen/margin_large"
        android:background="@drawable/btn_orange_selector"
        android:paddingBottom="@dimen/margin_small"
        android:paddingTop="@dimen/margin_small"
        android:text="@string/login"
        android:textColor="@android:color/white"
        android:textSize="@dimen/text_size_normal" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="17dp"
        android:gravity="center_vertical|center_horizontal"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="17dp"
            android:text="没有账号？"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/activity_login_register"
            android:layout_width="wrap_content"
            android:layout_height="17dp"
            android:clickable="true"
            android:text="点击注册"
            android:textColor="@color/bg_normal_gray"
            android:textStyle="bold" />
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="27dp"
        android:layout_marginTop="67dp"
        android:gravity="center"
        android:text="----------------- 第三方登录 -----------------"
        android:textColor="#ffffff"
        android:textSize="17sp"
        android:visibility="visible" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_marginTop="7dp"
        android:gravity="center" >

        <ImageButton
            android:id="@+id/imageButton_qq"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:background="@drawable/umeng_socialize_qq" >
        </ImageButton>

        <ImageButton
            android:id="@+id/imageButton_wechat"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:background="@drawable/umeng_socialize_wechat" >
        </ImageButton>
    </LinearLayout>

</LinearLayout>